--- a/title/titlepage.html
+++ b/title/titlepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liberation Labyrinth</title>
-    <link rel="stylesheet" href="/titlepage.css">
+    <link rel="stylesheet" href="titlepage.css">
 
 </head>
 <body class="body">
