--- a/gameover/gameover.html
+++ b/gameover/gameover.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the CSS stylesheet -->
     <link rel="stylesheet" href="gameover.css">
 </head>
 <body>
     <div id="container"></div>
-    <p>CONGRATULATIONS, YOU ECSCAPED FROM THE CASTLE!!!</p>
+    <!-- Congratulatory message -->
+    <p>CONGRATULATIONS, YOU ESCAPED FROM THE CASTLE!!!</p>
     <div class="buttons">
-        <button>PLAY AGAIN</button>
-        <button>EXIT</button>
+        <button id="pagain">PLAY AGAIN</button>
+        <button id="exit">EXIT</button>
     </div>
-    <p id="king">Created and developed by Sharugeshwaran</p>
+    <!-- Credits section -->
+    <p id="king">Designed and developed by <a href="https://ksharugeshwaran.github.io/portfolio.2.0/" ><span id="name">Sharugeshwaran</span></a></p>
 </body>
+<!-- Link to the JavaScript file -->
+<script src="gameover.js"></script>
 </html>
