--- a/introduction/intropage.html
+++ b/introduction/intropage.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the CSS stylesheet -->
     <link rel="stylesheet" href="intropage.css">
 </head>
 <body>
-    <img src="/assets/franklin.png" alt="">
+    <!-- Image of Franklin, the historian -->
+    <img src="/assets/franklin.png" alt="" id="franklin">
     <div id="message">
     </div>
-    <p>Hey, I'm Franklin, a historian who has been cursed to live here for decades by the monster. You are Professor John, an intrepid explorer on a quest to uncover the legendary treasure hidden deep within an ancient and mysterious castle. As you delve  into its dark corridors, you unwittingly disturb a malevolent monster that seizes you  and locks you in a remote chamber. To secure your release, you must outwit the creature by solving its complex challenges set by the monster and you must cross four  stages to get out of this castle. Can you unlock the castle's enigmatic secrets and  escape the monster's clutches to claim the coveted treasure?</p>
+    <!-- Introduction text -->
+    <p id="text">Hey, I'm Franklin, a historian who has been cursed to live here for decades by the monster. You are Professor John, an intrepid explorer on a quest to uncover the legendary treasure hidden deep within an ancient and mysterious castle. As you delve into its dark corridors, you unwittingly disturb a malevolent monster that seizes you and locks you in a remote chamber. To secure your release, you must outwit the creature by solving its complex challenges set by the monster, and you must cross four stages to get out of this castle. Can you unlock the castle's enigmatic secrets and escape the monster's clutches to claim the coveted treasure?</p>
+    <!-- Start button -->
     <button id="start">START</button>
 </body>
+<!-- Link to the JavaScript file -->
 <script src="intropage.js"></script>
 </html>
