--- a/stage1/stage1_intro.html
+++ b/stage1/stage1_intro.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the CSS stylesheet -->
     <link rel="stylesheet" href="stage1_intro.css">
 </head>
 <body>
+    <!-- Franklin image -->
     <div>
         <img src="/assets/franklin.png" alt="" id="franklin">
     </div>
+    <!-- Message container -->
     <div id="message"></div>
-    <p>Professor John, this prison door is the first one to be unlocked to reach next stage. Answer the riddle to open the door</p>
+    <!-- Introduction text -->
+    <p id="text">Professor John, this prison door is the first one to be unlocked to reach the next stage. Answer the riddle to open the door.</p>
+    <!-- Next button -->
     <button id="next">NEXT</button>
 </body>
+<!-- Link to the JavaScript file -->
 <script src="stage1_intro.js"></script>
 </html>
