--- a/stage1/stage1ta.html
+++ b/stage1/stage1ta.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the CSS stylesheet -->
     <link rel="stylesheet" href="stage1ta.css">
 </head>
 <body>
+    <!-- Image of Franklin -->
     <div>
         <img src="/assets/franklin.png" alt="" id="franklin">
     </div>
+    <!-- Message container -->
     <div id="message"></div>
+    <!-- Message text -->
     <p>Not quite right, my young friend. But don't be disheartened; every step brings us closer to our goal. Remember, each mistake is a chance to learn and grow. We'll find the way out together.</p>
+    <!-- "TRY AGAIN" button -->
     <button id="try">TRY AGAIN</button>
 </body>
+<!-- Link to the JavaScript file -->
+<script src="stage1ta.js"></script>
 </html>
