--- a/stage2/stage2.html
+++ b/stage2/stage2.html
@@ -18,23 +18,24 @@
 <body>
     <div id="challenge">
         <div id="container"></div>
-        <p id="riddle">"In the library's silent halls I dwell, A keeper of secrets, a story <br> to tell. You'll find me between vast covers of lore, Housing the <br>knowledge of those who explore. <br> <br> 
-            A labyrinth of wisdom in a  quiet place. I catalog and organize, <br>without end, Yet I'm not for reading, but a scholar's best friend. <br> <br>
-            What am I, within these  hallowed halls, A treasure trove of  <br>wisdom, where knowledge calls?"
-        </p>
+        <p id="riddles"></p>
     </div>
-    <div id="options">
-     <div id="text"></div>
+    <!-- <div id="options">
+     <div class="text" id="catalog"></div>
      <p class="op">Catalog</p>
-     <div id="text"></div>
+     <div class="text" id="register"></div>
      <p class="op">Register</p>
-     <div id="text"></div>
+     <div class="text" id="inventory"></div>
      <p class="op">Inventory</p>
-     <div id="text"></div>
+     <div class="text" id="archive"></div>
      <p class="op">Archive</p>
-    </div>
+    </div> -->
+    <form action="" id="answerForm">
+        <input type="text" id="answer" placeholder="ANSWER HERE" autocomplete="off">
+        <button type="submit">SUBMIT</button>
+    </form>
 </body>
-<script src="stage1.js"></script>
+<script src="stage2.js"></script>
 </html>
 </body>
 </html>
