--- a/stage2/stage2intro.html
+++ b/stage2/stage2intro.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the external stylesheet -->
     <link rel="stylesheet" href="stage2intro.css">
 </head>
 <body>
+    <!-- Image element for Franklin character -->
     <img src="/assets/franklin.png" alt="" id="frank">
+    <!-- Container for the message -->
     <div id="container"></div>
-    <p>I'm delighted to see you've safely <br> reached the library. To obtain the <br> map you seek, solve the riddle <br> at hand."</p>
+    <!-- Message paragraph -->
+    <p id="text">I'm delighted to see you've safely <br> reached the library. To obtain the <br> map you seek, solve the riddle <br> at hand.</p>
+    <!-- Button to proceed to the next stage -->
     <button id="next">NEXT</button>
 </body>
+<!-- Link to the JavaScript file -->
+<script src="stage2intro.js"></script>
 </html>
