--- a/stage2/stage2p.html
+++ b/stage2/stage2p.html
@@ -1,19 +1,26 @@
+<!-- HTML document for the second stage with CSS and JavaScript references -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link to the CSS stylesheet for styling -->
     <link rel="stylesheet" href="stage2p.css">
 </head>
 <body>
-    <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
-    </div>
+    <!-- Displaying an image of Franklin -->
+    <img src="/assets/franklin.png" alt="" id="franklin">
+    <!-- A container for the message -->
     <div id="message"></div>
-    <p>Well done, my sharp-witted companion! Your intellect has revealed the map <br> of the forest that lies beyond these castle walls. This will help you after you <br>successfully escape out of the castle. Follow me,
+    <!-- Text content -->
+    <p>Well done, my sharp-witted companion! Your intellect has revealed the map <br> of the forest that lies beyond these castle walls. This will help you after you <br> successfully escape out of the castle. Follow me,
         I will take you to the <br> chamber where the treasure is.</p>
-    <img src="./assets/forest map.jpg" alt="" id="map">
-    <button id="try">NEXT</button>
+    <!-- An image element for displaying the map -->
+    <img src="/assets/forest map.jpg" alt="" id="map">
+    <!-- A button for navigation -->
+    <button id="next">NEXT</button>
 </body>
+<!-- Link to the JavaScript file for functionality -->
+<script src="stage2p.js"></script>
 </html>
