--- a/stage4/stage4.html
+++ b/stage4/stage4.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stage4.css">
 </head>
 <body>
-    <p> 10 : 00</p>
+    <p id="timer"> 5 : 00</p>
     <div class="grid">
         <div class="tile"></div>
     <div class="tile"></div>
@@ -37,4 +37,5 @@
     </div>
     
 </body>
+<script src="stage4.js"></script>
 </html>
