--- a/stage1/stage1p.html
+++ b/stage1/stage1p.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="stage1p.css">
 </head>
-<body>
+<body id="bod">
     <div>
         <img src="/assets/franklin.png" alt="" id="franklin">
     </div>
     <div id="message"></div>
-    <p>Great, You have opened the door. <br> Now head to the library to get the <br> map of the mysterious forest outside.</p>
+    <p id="text">Great, You have opened the door. <br> Now head to the library to get the <br> map of the mysterious forest outside.</p>
     <button id="next">NEXT</button>
-    <div id="black"></div>
 </body>
+<script src="stage1p.js"></script>
 </html>
