--- a/stage2/stage2ta.html
+++ b/stage2/stage2ta.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage2ta.css">
+    <link rel="stylesheet" href="stage2ta.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
     <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
+        <img src="/assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image -->
     </div>
-    <div id="message"></div>
+    <div id="message"></div> <!-- Empty container for a message -->
     <p>A noble attempt, but we haven't yet unveiled the path to our escape. <br> Remember, in the face of challenge, patience and persistence are <br> your greatest allies.</p>
-    <button id="try">TRY AGAIN</button>
+    <button id="try">TRY AGAIN</button> <!-- Button for trying again -->
 </body>
+<script src="stage2ta.js"></script> <!-- Linking to the JavaScript file -->
 </html>
