--- a/stage3/stage3.html
+++ b/stage3/stage3.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage3.css">
+    <link rel="stylesheet" href="stage3.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
-    <img src="/assets/snake_2-removebg-preview.png" alt="">
-    <div id="container"></div>
+    <img src="/assets/snake_2-removebg-preview.png" alt=""> <!-- Displaying an image -->
+    <div id="container"></div> <!-- Empty container for a message -->
     <p>Halt there! I am the protector of this hallowed treasure chamber. To exit these depths with your life and the treasures you've seized, you must first conquer this cryptic code <br> <br> 'DSVM GSV MRTST UZOOH YVDZIV LU GSV HSZWLDH.'</p>
-    <input type="text" id="answer" placeholder="ANSWER HERE">
-    <button type="submit">SUBMIT</button>
+    <form action="" id="answerForm">
+        <input type="text" id="answer" placeholder="ANSWER HERE" autocomplete="off">
+        <button type="submit" id="next">SUBMIT</button>
+    </form>
 </body>
+<script src="stage3.js"></script> <!-- Linking to the JavaScript file -->
 </html>
