--- a/stage4/stage4intro.html
+++ b/stage4/stage4intro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage4intro.css">
+    <link rel="stylesheet" href="stage4intro.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
     <div>
@@ -14,5 +14,5 @@
     <p>I've guided you through the labyrinthine depths of the castle, leading you to the basement. Your path to escape lies ahead, but proceed with caution. The lurking monster could strike at any moment.</p>
     <button id="next">NEXT</button>
 </body>
-<script src="stage1_intro.js"></script>
+<script src="stage4intro.js"></script> <!-- Linking to the JavaScript file -->
 </html>
