--- a/stage4/stage4intro2.html
+++ b/stage4/stage4intro2.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage4intro2.css">
+    <link rel="stylesheet" href="stage4intro2.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
-    <img src="/assets/monster.png" alt="">
+    <img src="/assets/monster.png" alt="" id="monster">
     <div id="container"></div>
-    <p>Human! dont think you can escape with out facing me, now, right before the exit of basement , you face a grid of color-shifting tiles. Your task: unify them all—either red or blue. But every click changes neighbors. Can you decipher the sequence and reveal your path to escape? Beware, for I watch your every move. Solve this, or prepare to be devoured!</p>
-    <button>TO CHALLENGE</button>
+    <p>Human! Don't think you can escape without facing me. Right before the exit of the basement, you face a grid of color-shifting tiles. Your task: unify them all—either red or blue. But every click changes neighbors. Can you decipher the sequence and reveal your path to escape? Beware, for I watch your every move. Solve this, or prepare to be devoured!</p>
+    <button id="next">TO CHALLENGE</button>
 </body>
+<script src="stage4intro2.js"></script> <!-- Linking to the JavaScript file -->
 </html>
