--- a/stage4/stage4p.html
+++ b/stage4/stage4p.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="stage4p.css">
-</head>
-<body>
-    <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
-    </div>
-    <div id="message"></div>
-    <p>Congratulations! You have successfully defeated the monster by solving the puzzle. Now, you can exit the castle and embark on a journey to live happily ever after. Your courage and wit have brought you freedom and a brighter future</p>
-    <button id="next">NEXT</button>
-</body>
-<script src="stage1_intro.js"></script>
-</html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Document</title>
+            <link rel="stylesheet" href="stage4p.css"> <!-- Linking to the CSS file -->
+        </head>
+        <body>
+            <div>
+                <img src="/assets/franklin.png" alt="" id="franklin">
+            </div>
+            <div id="message"></div>
+            <p>Congratulations! You have successfully defeated the monster by solving the puzzle. Now, you can exit the castle and embark on a journey to live happily ever after. Your courage and wit have brought you freedom and a brighter future.</p>
+            <button id="next">NEXT</button>
+        </body>
+        <script src="stage4p.js"></script> <!-- Linking to the JavaScript file -->
+        </html>
+
