--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liberation Labyrinth</title>
-    <link rel="stylesheet" href="/title/style.css">
+    <link rel="stylesheet" href="./../title/style.css">
 
 </head>
 <body class="body">
@@ -12,5 +12,5 @@
     <button id="play">PLAY GAME</button>
 
 </body>
-<script src="/title/app.js"></script>
+<script src="./../title/app.js"></script>
 </html>
