--- a/stage4/stage4.html
+++ b/stage4/stage4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage4.css">
+    <link rel="stylesheet" href="./stage4.css">
 </head>
 <body>
     <p id="timer"> 5 : 00</p>
@@ -37,5 +37,5 @@
     </div>
     
 </body>
-<script src="stage4.js"></script>
+<script src="./stage4.js"></script>
 </html>
