--- a/stage4/stage4ta.html
+++ b/stage4/stage4ta.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage4ta.css"> <!-- Linking to the CSS file -->
+    <link rel="stylesheet" href="./stage4ta.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
     <p>YOU WERE DEVOURED BY THE MONSTER</p>
     <button id="try">TRY AGAIN</button>
 </body>
-<script src="stage4ta.js"></script> <!-- Linking to the JavaScript file -->
+<script src="./stage4ta.js"></script> <!-- Linking to the JavaScript file -->
 </html>
