--- a/introduction/intropage.html
+++ b/introduction/intropage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="intropage.css">
+    <link rel="stylesheet" href="./intropage.css">
 </head>
 <body>
     <!-- Image of Franklin, the historian -->
@@ -19,5 +19,5 @@
     <button id="start">START</button>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="intropage.js"></script>
+<script src="./intropage.js"></script>
 </html>
