--- a/gameover/gameover.html
+++ b/gameover/gameover.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="gameover.css">
+    <link rel="stylesheet" href="./gameover.css">
 </head>
 <body>
     <div id="container"></div>
@@ -20,5 +20,5 @@
     <p id="king">Designed and developed by <a href="https://ksharugeshwaran.github.io/portfolio.2.0/" ><span id="name">Sharugeshwaran</span></a></p>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="gameover.js"></script>
+<script src="./gameover.js"></script>
 </html>
