--- a/stage1/stage1_intro.html
+++ b/stage1/stage1_intro.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="stage1_intro.css">
+    <link rel="stylesheet" href="./stage1_intro.css">
 </head>
 <body>
     <!-- Franklin image -->
     <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
+        <img src="./assets/franklin.png" alt="" id="franklin">
     </div>
     <!-- Message container -->
     <div id="message"></div>
@@ -21,5 +21,5 @@
     <button id="next">NEXT</button>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="stage1_intro.js"></script>
+<script src="./stage1_intro.js"></script>
 </html>
