--- a/stage2/stage2.html
+++ b/stage2/stage2.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Stage2.css">
+    <link rel="stylesheet" href="./Stage2.css">
 </head>
 <body>
     <div id="challenge">
@@ -35,7 +35,7 @@
         <button type="submit">SUBMIT</button>
     </form>
 </body>
-<script src="stage2.js"></script>
+<script src="./stage2.js"></script>
 </html>
 </body>
 </html>
