--- a/stage2/stage2intro.html
+++ b/stage2/stage2intro.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the external stylesheet -->
-    <link rel="stylesheet" href="stage2intro.css">
+    <link rel="stylesheet" href="./stage2intro.css">
 </head>
 <body>
     <!-- Image element for Franklin character -->
-    <img src="/assets/franklin.png" alt="" id="frank">
+    <img src="./assets/franklin.png" alt="" id="frank">
     <!-- Container for the message -->
     <div id="container"></div>
     <!-- Message paragraph -->
@@ -18,5 +18,5 @@
     <button id="next">NEXT</button>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="stage2intro.js"></script>
+<script src="./stage2intro.js"></script>
 </html>
