--- a/stage1/stage1.html
+++ b/stage1/stage1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="stage1.css">
+    <link rel="stylesheet" href="./stage1.css">
 </head>
 <body>
     <!-- Challenge container -->
@@ -20,8 +20,8 @@
         <button type="submit" id="next">SUBMIT</button>
     </form>
     <!-- Background music player -->
-    <audio src="/music/2022-12-01_-_Looking_For_Clues_-_www.FesliyanStudios.com.mp3" id="bgm" controls loop></audio>
+    <audio src="./music/2022-12-01_-_Looking_For_Clues_-_www.FesliyanStudios.com.mp3" id="bgm" controls loop></audio>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="stage1.js"></script>
+<script src="./stage1.js"></script>
 </html>
