--- a/stage1/stage1p.html
+++ b/stage1/stage1p.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage1p.css">
+    <link rel="stylesheet" href="./stage1p.css">
 </head>
 <body id="bod">
     <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
+        <img src="./assets/franklin.png" alt="" id="franklin">
     </div>
     <div id="message"></div>
     <p id="text">Great, You have opened the door. <br> Now head to the library to get the <br> map of the mysterious forest outside.</p>
     <button id="next">NEXT</button>
 </body>
-<script src="stage1p.js"></script>
+<script src="./stage1p.js"></script>
 </html>
