--- a/stage1/stage1ta.html
+++ b/stage1/stage1ta.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="stage1ta.css">
+    <link rel="stylesheet" href="./stage1ta.css">
 </head>
 <body>
     <!-- Image of Franklin -->
     <div>
-        <img src="/assets/franklin.png" alt="" id="franklin">
+        <img src="./assets/franklin.png" alt="" id="franklin">
     </div>
     <!-- Message container -->
     <div id="message"></div>
@@ -21,5 +21,5 @@
     <button id="try">TRY AGAIN</button>
 </body>
 <!-- Link to the JavaScript file -->
-<script src="stage1ta.js"></script>
+<script src="./stage1ta.js"></script>
 </html>
