--- a/stage3/stage3intro.html
+++ b/stage3/stage3intro.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage3intro.css"> <!-- Linking to the CSS file -->
+    <link rel="stylesheet" href="./stage3intro.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
     <div>
-        <img src="/assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image of Franklin -->
+        <img src="./assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image of Franklin -->
     </div>
     <div id="message"></div> <!-- Empty container for a message -->
     <p id="text">Don't be so jubilant just yet, for you've entered this chamber without <br> a trial. The true challenge lies within, shrouded in darkness. You'll soon <br> discover the depths of this test.</p>
     <button id="next">NEXT</button> <!-- Next button for proceeding to the next stage -->
 </body>
-<script src="stage3intro.js"></script> <!-- Linking to the JavaScript file -->
+<script src="./stage3intro.js"></script> <!-- Linking to the JavaScript file -->
 </html>
