--- a/stage3/stage3p.html
+++ b/stage3/stage3p.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage3p.css"> <!-- Linking to the CSS file -->
+    <link rel="stylesheet" href="./stage3p.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
-    <img src="/assets/snake2.png" alt=""> <!-- Displaying an image of a snake -->
+    <img src="./assets/snake2.png" alt=""> <!-- Displaying an image of a snake -->
     <div id="container"></div> <!-- Empty container for a message -->
     <p>I hiss in approval as a cunning human claims these treasures. But in the world beyond, tread with care</p>
     <button id="next">NEXT</button> <!-- Next button for proceeding to the next stage -->
 </body>
-<script src="stage3p.js"></script> <!-- Linking to the JavaScript file -->
+<script src="./stage3p.js"></script> <!-- Linking to the JavaScript file -->
 </html>
