--- a/stage3/stage3ta.html
+++ b/stage3/stage3ta.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stage3ta.css"> <!-- Linking to the CSS file -->
+    <link rel="stylesheet" href="./stage3ta.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
     <p>YOU WERE KILLED BY THE GUARDIAN</p> <!-- Displaying a message indicating the player's defeat -->
     <button id="try">TRY AGAIN</button> <!-- Button to try again after being defeated -->
 </body>
-<script src="stage3ta.js"></script> <!-- Linking to the JavaScript file -->
+<script src="./stage3ta.js"></script> <!-- Linking to the JavaScript file -->
 </html>
