--- a/introduction/intropage.html
+++ b/introduction/intropage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Image of Franklin, the historian -->
-    <img src="./assets/franklin.png" alt="" id="franklin">
+    <img src="./../assets/franklin.png" alt="" id="franklin">
     <div id="message">
     </div>
     <!-- Introduction text -->
