--- a/stage1/stage1.html
+++ b/stage1/stage1.html
@@ -20,7 +20,7 @@
         <button type="submit" id="next">SUBMIT</button>
     </form>
     <!-- Background music player -->
-    <audio src="./music/2022-12-01_-_Looking_For_Clues_-_www.FesliyanStudios.com.mp3" id="bgm" controls loop></audio>
+    <audio src="./../music/2022-12-01_-_Looking_For_Clues_-_www.FesliyanStudios.com.mp3" id="bgm" controls loop></audio>
 </body>
 <!-- Link to the JavaScript file -->
 <script src="./stage1.js"></script>
