--- a/stage1/stage1p.html
+++ b/stage1/stage1p.html
@@ -8,7 +8,7 @@
 </head>
 <body id="bod">
     <div>
-        <img src="./assets/franklin.png" alt="" id="franklin">
+        <img src="./../assets/franklin.png" alt="" id="franklin">
     </div>
     <div id="message"></div>
     <p id="text">Great, You have opened the door. <br> Now head to the library to get the <br> map of the mysterious forest outside.</p>
