--- a/stage2/stage2intro.html
+++ b/stage2/stage2intro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Image element for Franklin character -->
-    <img src="./assets/franklin.png" alt="" id="frank">
+    <img src="./../assets/franklin.png" alt="" id="frank">
     <!-- Container for the message -->
     <div id="container"></div>
     <!-- Message paragraph -->
