--- a/stage2/stage2p.html
+++ b/stage2/stage2p.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <!-- Displaying an image of Franklin -->
-    <img src="./assets/franklin.png" alt="" id="franklin">
+    <img src="./../assets/franklin.png" alt="" id="franklin">
     <!-- A container for the message -->
     <div id="message"></div>
     <!-- Text content -->
     <p>Well done, my sharp-witted companion! Your intellect has revealed the map <br> of the forest that lies beyond these castle walls. This will help you after you <br> successfully escape out of the castle. Follow me,
         I will take you to the <br> chamber where the treasure is.</p>
     <!-- An image element for displaying the map -->
-    <img src="./assets/forest map.jpg" alt="" id="map">
+    <img src="./../assets/forest map.jpg" alt="" id="map">
     <!-- A button for navigation -->
     <button id="next">NEXT</button>
 </body>
