--- a/stage3/stage3.html
+++ b/stage3/stage3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./stage3.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
-    <img src="./assets/snake_2-removebg-preview.png" alt=""> <!-- Displaying an image -->
+    <img src="./../assets/snake_2-removebg-preview.png" alt=""> <!-- Displaying an image -->
     <div id="container"></div> <!-- Empty container for a message -->
     <p>Halt there! I am the protector of this hallowed treasure chamber. To exit these depths with your life and the treasures you've seized, you must first conquer this cryptic code <br> <br> 'DSVM GSV MRTST UZOOH YVDZIV LU GSV HSZWLDH.'</p>
     <form action="" id="answerForm">
