--- a/stage4/stage4intro.html
+++ b/stage4/stage4intro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="./assets/franklin.png" alt="" id="franklin">
+        <img src="./../assets/franklin.png" alt="" id="franklin">
     </div>
     <div id="message"></div>
     <p>I've guided you through the labyrinthine depths of the castle, leading you to the basement. Your path to escape lies ahead, but proceed with caution. The lurking monster could strike at any moment.</p>
