--- a/stage4/stage4intro2.html
+++ b/stage4/stage4intro2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./stage4intro2.css"> <!-- Linking to the CSS file -->
 </head>
 <body>
-    <img src="./assets/monster.png" alt="" id="monster">
+    <img src="./../assets/monster.png" alt="" id="monster">
     <div id="container"></div>
     <p>Human! Don't think you can escape without facing me. Right before the exit of the basement, you face a grid of color-shifting tiles. Your task: unify them all—either red or blue. But every click changes neighbors. Can you decipher the sequence and reveal your path to escape? Beware, for I watch your every move. Solve this, or prepare to be devoured!</p>
     <button id="next">TO CHALLENGE</button>
