--- a/stage4/stage4p.html
+++ b/stage4/stage4p.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <div>
-                <img src="./assets/franklin.png" alt="" id="franklin">
+                <img src="./../assets/franklin.png" alt="" id="franklin">
             </div>
             <div id="message"></div>
             <p>Congratulations! You have successfully defeated the monster by solving the puzzle. Now, you can exit the castle and embark on a journey to live happily ever after. Your courage and wit have brought you freedom and a brighter future.</p>
