--- a/stage1/stage1ta.html
+++ b/stage1/stage1ta.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Image of Franklin -->
     <div>
-        <img src="./assets/franklin.png" alt="" id="franklin">
+        <img src="./../assets/franklin.png" alt="" id="franklin">
     </div>
     <!-- Message container -->
     <div id="message"></div>
