--- a/stage2/stage2ta.html
+++ b/stage2/stage2ta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="./assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image -->
+        <img src="./../assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image -->
     </div>
     <div id="message"></div> <!-- Empty container for a message -->
     <p>A noble attempt, but we haven't yet unveiled the path to our escape. <br> Remember, in the face of challenge, patience and persistence are <br> your greatest allies.</p>
