--- a/stage3/stage3intro.html
+++ b/stage3/stage3intro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="./assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image of Franklin -->
+        <img src="./../assets/franklin.png" alt="" id="franklin"> <!-- Displaying an image of Franklin -->
     </div>
     <div id="message"></div> <!-- Empty container for a message -->
     <p id="text">Don't be so jubilant just yet, for you've entered this chamber without <br> a trial. The true challenge lies within, shrouded in darkness. You'll soon <br> discover the depths of this test.</p>
