--- a/introduction/intropage.html
+++ b/introduction/intropage.html
@@ -14,7 +14,7 @@
     <div id="message">
     </div>
     <!-- Introduction text -->
-    <p id="text">Hey, I'm Franklin, a historian who has been cursed to live here for decades by the monster. You are Professor John, an intrepid explorer on a quest to uncover the legendary treasure hidden deep within an ancient and mysterious castle. As you delve into its dark corridors, you unwittingly disturb a malevolent monster that seizes you and locks you in a remote chamber. To secure your release, you must outwit the creature by solving its complex challenges set by the monster, and you must cross four stages to get out of this castle. Can you unlock the castle's enigmatic secrets and escape the monster's clutches to claim the coveted treasure?</p>
+    <p id="text">Hey, I'm Franklin, a historian who has been cursed to live here for decades by the monster. You are Professor <span id="name"></span>, an intrepid explorer on a quest to uncover the legendary treasure hidden deep within an ancient and mysterious castle. As you delve into its dark corridors, you unwittingly disturb a malevolent monster that seizes you and locks you in a remote chamber. To secure your release, you must outwit the creature by solving its complex challenges set by the monster, and you must cross four stages to get out of this castle. Can you unlock the castle's enigmatic secrets and escape the monster's clutches to claim the coveted treasure?</p>
     <!-- Start button -->
     <button id="start">START</button>
 </body>
